<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/input_background">

    <TextView
        android:id="@+id/update_product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_product_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/update_product_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/update_product_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/update_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_product"
        android:layout_marginTop="16dp"/>
</LinearLayout>

